# kfengine-tech

./: .gitignore  CMakeLists.txt  HelloDiligent.cpp  PrepareUniform.cpp  material_sandbox.cpp  material_sandbox.h
filament/backend/include/backend/: DriverEnums.h  Program.h
filament/backend/include/private/backend/: CommandStream.h  Driver.h
filament/backend/src/: Program.cpp
filament/src/: Allocators.h  FilamentBuilder.cpp  Froxelizer.cpp  Froxelizer.h  HwDescriptorSetLayoutFactory.h  HwVertexBufferInfoFactory.h  MaterialInstance.cpp
filament/src/components/: CameraManager.cpp
filament/src/details/: Camera.cpp  Camera.h  Engine.h  IndirectLight.cpp  MaterialInstance.cpp  Skybox.cpp  Skybox.h  Texture.h
filament/src/ds/: ColorPassDescriptorSet.cpp  ColorPassDescriptorSet.h  ShadowMapDescriptorSet.cpp  SsrPassDescriptorSet.cpp
libs/filamentapp/src/: IBL.cpp
